deploy/k8s/chad-apps-chart/templates/training/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: training.metachad.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: training-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: training-service
                port:
                  number: 80
  tls:
    - hosts:
        - training.metachad.duckdns.org
      secretName: training-cert
